2.3/files/task2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: my-index
          mountPath: /usr/share/nginx/html
      volumes:
        - name: my-index
          configMap:
            name: task2-configmap
            items:
              - key: index.html
                path: index.html
