2.3/files/task1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 1180
      targetPort: 1180
      name: http-port
    - protocol: TCP
      port: 11443
      targetPort: 11443
      name: https-port
