2.3/files/task2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: task2-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
